# fetchopendata

./: .gitignore  pyproject.toml  readme.md  setup.cfg
src/fetchopendata/: __init__.py  _fetch_abs_erp_lga2021.py  _fetch_road_network_info.py
tests/: manual_test.ipynb  test_fetch_abs_erp_lga2021.py  test_fetch_road_network_info.py
