[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fetchopendata"
version = "0.3.0"
description = 'Download the Road Network dataset from the Main Roads Western Australia Open Data Portal'
readme = "readme.md"
requires-python = ">=3.9"
license = ""
keywords = ["Main Roads Open Data Portal", "Road Network Geometry", "Western Australia"]
authors = [
  { name = "thehappycheese"},
]
dependencies = [
  "pandas",
  "requests"
]

[project.urls]
Documentation = "https://github.com/thehappycheese/fetchopendata#readme"
Issues = "https://github.com/thehappycheese/fetchopendata/issues"
Source = "https://github.com/thehappycheese/fetchopendata"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=fetchopendata --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/fetchopendata/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
