[metadata]
name = fetchopendata
version = 0.1.0
author = thehappycheese
url=https://notarealurl.com
long_description = file: readme.md
long_description_content_type = text/markdown


[options]
package_dir = 
    = src
packages = find:
install_requires =
    pandas
    pandasdmx
    requests
python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
dev=
    pytest